--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,5 @@ $body-font-family: 'Quattrocento Sans', sans-serif;
 // Colors
 $primary-color: #1ca086;
 $black: #2d2d2a;
+
+$container-width: 670px;
